k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petstore-app
  namespace: petstore
  labels:
    app: petstore
    component: backend
    version: v1
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    prometheus.io/scrape: "true"
    prometheus.io/path: "/api/health"
    prometheus.io/port: "5000"
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: petstore
  sessionAffinity: None
